--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "@tremor/react": "^1.0.6",
     "cookies": "^0.8.0",
     "cypress": "^10.0.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.1.8"
   }
 }
